--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 
     <div class="row">
         <div class="col-lg-12 containerList">
-            <script id="toDoListTpl" type="text/template">
+            <!--script id="toDoListTpl" type="text/template"-->
                 <div class="jumbotron">
                     <h3>Titolo della lista</h3>
                 </div>
@@ -24,7 +24,7 @@
                     <li><input type="checkbox" name="" value="">Quello</input></li>
                     <li><input type="checkbox" name="" value="">e quell'altro</input></li>
                 </ul>
-            </script>
+            <!-- /script -->
             <!--<script id="toDoListTpl" type="text/template">
                 <h1>{{title}}</h1>
                 <ul>
